# gmtsar-py

./: Readme.md  preproc_batch_tops.csh  preproc_batch_tops.py  pyproject.toml
src/gmtsar_py/: __init__.py
